# nu_plugin_unzip

./: Cargo.toml  README.md
src/: lib.rs  main.rs
